Fix the Download Notifications for Offline Pages to indicate bytes loaded.

This wires the UpdateProgress call from PrerenderingOffliner via DownloadUIAdapter to the DownloadNotifyingObserver. As a result, the Android notifications about ongoing Offline Page downloads start to be updated with a real byte count.

BUG=698020

Review-Url: https://codereview.chromium.org/2736843002
Cr-Commit-Position: refs/heads/master@{#455486}
(cherry picked from commit 0e2f6cb4e64a3d6c251e9aa782927cffb829a5d3)

Review-Url: https://codereview.chromium.org/2742833004 .
Cr-Commit-Position: refs/branch-heads/3029@{#101}
Cr-Branched-From: 939b32ee5ba05c396eef3fd992822fcca9a2e262-refs/heads/master@{#454471}